# wb-price-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
deploy/: Caddyfile
docs/: ARCHITECTURE.md  OPERATIONS.md  SECURITY.md  WB_PROVIDER.md
extension/: README.txt  manifest.json  popup.css  popup.html  popup.js  service-worker.js
scripts/: capture_wb_session.py  install.sh
src/wb_price_bot/: __init__.py  auth_web.py  bot.py  charts.py  cli.py  config.py  database.py  domain.py  exports.py  features.py  handlers.py  keyboards.py  models.py  monitor.py  security.py  server_stats.py  telegram_auth.py  wildberries.py
tests/: conftest.py  test_artifacts.py  test_auth_web.py  test_config.py  test_database.py  test_domain.py  test_monitor.py  test_security.py  test_server_stats.py  test_telegram_auth.py  test_wildberries.py
