[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "wb-price-bot"
version = "0.5.2"
description = "Telegram-бот для отслеживания цен Wildberries"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "lebrit" }]
dependencies = [
  "aiogram>=3.20,<4",
  "aiohttp>=3.12,<4",
  "aiosqlite>=0.21,<1",
  "cryptography>=48.0.1,<49",
  "httpx>=0.28,<1",
  "Pillow>=11,<13",
  "SQLAlchemy>=2.0.40,<3",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
browser = ["playwright>=1.52,<2"]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=1.0,<2",
  "respx>=0.22,<1",
  "ruff>=0.11,<1",
]

[project.scripts]
wb-price-bot = "wb_price_bot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wb_price_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501", "RUF001", "ASYNC240"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["wb_price_bot"]

[[tool.mypy.overrides]]
module = ["playwright", "playwright.*"]
ignore_missing_imports = true
